@@ -13,7 +13,7 @@ Licensed under the MIT License.
 
   <groupId>com.azure</groupId>
   <artifactId>azure-cosmos</artifactId>
-  <version>4.13.0-beta.1</version> <!-- {x-version-update;com.azure:azure-cosmos;current} -->
+  <version>4.14.0-beta.1</version> <!-- {x-version-update;com.azure:azure-cosmos;current} -->
   <name>Microsoft Azure SDK for SQL API of Azure Cosmos DB Service</name>
   <description>This Package contains Microsoft Azure Cosmos SDK (with Reactive Extension Reactor support) for Azure Cosmos DB SQL API</description>
   <packaging>jar</packaging>
@@ -529,6 +529,8 @@ Licensed under the MIT License.
                 --add-opens com.azure.cosmos/com.azure.cosmos.models=ALL-UNNAMED
                 --add-opens com.azure.cosmos/com.azure.cosmos.rx=ALL-UNNAMED
                 --add-opens com.azure.cosmos/com.azure.cosmos.rx.proxy=ALL-UNNAMED
+                --add-opens com.azure.cosmos/com.azure.cosmos.implementation.throughputControl=ALL-UNNAMED
+                --add-opens com.azure.cosmos/com.azure.cosmos.implementation.throughputControl.controller.request=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
